Fri May 23 13:43:33 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* date.cc,scriptindex.cc: Pass std::string by const reference.

Fri May 23 13:42:02 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* query.cc: Removed unused inline function.

Fri May 23 13:38:33 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* omindex.cc: Report the size limit in the message when we skip a file
	  which exceeds it.

Wed Apr 30 05:44:54 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Mon Apr 14 10:28:51 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* diritor.cc: Work around libmagic returning a MIME content-type of
	  "Composite Document File V2 Document, No summary info".

Mon Apr 14 09:38:51 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* expand.cc: Fix warning when built with GCC 4.7.2 using -Os.

Fri Mar 14 12:12:59 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* Makefile.am,docs/omegascript.rst,expand.cc,expand.h,omega.cc,
	  query.cc: Add support for setting the query expansion scheme to use.

Tue Jan 28 23:50:11 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.17.

Sun Jan 05 22:11:39 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Thu Dec 26 01:21:42 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* Makefile.am,portability/mkdtemp.cc,portability/mkdtemp.h,omindex.cc:
	  Add header with prototype of mkdtemp() to avoid "no previous
	  declaration" warning on platforms which don't have mkdtemp() as
	  standard.

Fri Dec 20 08:00:25 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Dec 20 07:04:32 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/overview.rst: Add Abiword as an example use of --filter, based
	  on patch from Frank J Bruzzaniti (fixes#383).  Update unoconv